# claimcheck

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: timing_bench.py
claimcheck/: __init__.py  pipeline.py
examples/: README.md  daemon_integration.py  discord_bot.py  ecommerce_product_rag.py  langchain_integration.py  llamaindex_integration.py  middleware.py  quickstart.py  server_fastapi.py  slack_bot.py  streaming.py
tests/: test_pipeline.py
