[project]
name = "claimcheck"
version = "0.1.0"
description = "Domain-tuned retrieval + zero-LLM claim verification in one pipeline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "atakan" }]
keywords = ["llm", "rag", "retrieval", "hallucination", "verification", "domain-adaptation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# adaptmem and halluguard are sibling packages. While both are pre-PyPI we
# rely on local editable installs (`pip install -e ../adaptmem ../halluguard`).
# Once they're published, list them here as proper dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claimcheck*"]

[tool.setuptools.package-data]
claimcheck = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
